<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/acesse_blue1"
     >
    <ImageView
        android:id="@+id/acesse_logo" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/a_logo"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acesse_logo"
        android:background="@color/acesse_blue2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/earnRewards"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/acesse_blue3"
            android:gravity="center"
            android:text="@string/earnRewards2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/learn_more_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/learnMore"
            android:textColor="@color/acesse_darkblue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/acesse_blue2"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interestedInACareer"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center" 
        />
        
         <TextView
             android:id="@+id/become_consultant_text_view" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/becomeConsultant"
             android:textColor="@color/acesse_darkblue"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginTop="40dp"
             android:textSize="18sp"
             android:textStyle="bold"
             />
         </LinearLayout>
</RelativeLayout>
