<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentContainerContact"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="top"
        android:background="@color/acesse_blue1"
         >

                <TextView
                    android:id="@+id/profile_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/contacts"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/addContact"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/action_add"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/acesse_blue2" />
        
        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/welcome_youchat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/bone" />

        <TextView
            android:id="@+id/request"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="10dp"
            android:background="@drawable/orange_alert_flag"
            android:gravity="center"
            android:text="@string/request_number"
            android:textColor="@color/white" />
</FrameLayout>

</LinearLayout>
