<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acesse_lightblue"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/current_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/currentPasword"
        android:inputType="textPassword"
        android:maxLength="25"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/acesse_lightblue"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:maxLength="25"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/acesse_lightblue"
        android:textCursorDrawable="@null"/>

    <EditText
        android:id="@+id/reenter_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/rePassword"
        android:inputType="textPassword"
        android:maxLength="25"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/acesse_lightblue"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/acesse_darkblue_button"
        android:padding="10dp"
        android:text="@string/changePassword"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>